# CCMM-V

./: .gitignore
invenio/: README.md  pyproject.toml
invenio/fixtures/: catalogue.yaml  ccmm_access_rights.yaml  ccmm_contributor_type.yaml  ccmm_file_types.yaml  ccmm_languages.yaml  ccmm_resource_types.yaml  ccmm_subject_schemes.yaml
invenio/invenio_ccmm/: base.py  ccmm_csv.py  ccmm_filtered.py  ccmm_sparql.py  convert_vocabularies.py
